test/modules/deitz/test_module_access4.good
test_module_access4.chpl:7: error: unresolved call 'M.foo(3.0)'
test_module_access4.chpl:4: note: candidates are: foo(i: int)
